--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
 	"keywords": ["q", "kx", "interfacing"],
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "make test"
 	},
 	"author": "Michael Wittig <michael.wittig@cinovo.de>",
-	"license": "Apache-2.0"
+	"license": "Apache-2.0",
+	"dependencies": {
+		"assert-plus": "0.1.5"
+	},
+	"devDependencies": {
+		"mocha": "2.0.0",
+		"jslint": "0.6.4",
+		"madge": "0.3.5",
+		"npmedge": "0.2.1"
+	}
 }
