fixes #1 and new release

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "node-q",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "Q interfacing with Node.js",
-	"keywords": ["q", "kx", "interfacing"],
+	"keywords": ["q", "kdb+", "kdb+tick", "interfacing", "kx"],
 	"main": "index.js",
 	"scripts": {
 		"test": "make test"
