--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-q",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"description": "Q interfacing with Node.js",
 	"keywords": ["q", "kdb+", "kdb+tick", "interfacing", "kx"],
 	"main": "index.js",
@@ -17,5 +17,9 @@
 		"jslint": "0.6.4",
 		"madge": "0.3.5",
 		"npmedge": "0.2.1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/cinovo/node-q.git"
 	}
 }
