--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-q",
-	"version": "0.3.0",
+	"version": "0.4.0",
 	"description": "Q interfacing with Node.js",
 	"keywords": ["q", "kdb+", "kdb+tick", "interfacing", "kx"],
 	"main": "index.js",
@@ -10,7 +10,8 @@
 	"author": "Michael Wittig <michael.wittig@cinovo.de>",
 	"license": "Apache-2.0",
 	"dependencies": {
-		"assert-plus": "0.1.5"
+		"assert-plus": "0.1.5",
+		"memcpy": "0.5.0"
 	},
 	"devDependencies": {
 		"mocha": "2.0.0",
