--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-q",
-	"version": "0.4.0",
+	"version": "0.5.0",
 	"description": "Q interfacing with Node.js",
 	"keywords": ["q", "kdb+", "kdb+tick", "interfacing", "kx"],
 	"main": "index.js",
@@ -16,6 +16,7 @@
 		"memcpy": "0.5.0"
 	},
 	"devDependencies": {
+		"async": "0.9.0",
 		"mocha": "2.0.0",
 		"jslint": "0.6.4",
 		"madge": "0.3.5",
