--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "node-q",
-	"version": "0.8.0",
+	"version": "0.9.0",
 	"description": "Q interfacing with Node.js",
-	"keywords": ["q", "kdb+", "kdb+tick", "interfacing", "kx"],
+	"keywords": ["q", "kx", "kdb+", "kdb+tick", "interfacing"],
 	"main": "index.js",
 	"scripts": {
-		"test": "make test"
+		"test": "make test",
+		"itest": "make itest"
 	},
 	"author": "Michael Wittig <michael.wittig@cinovo.de>",
 	"license": "Apache-2.0",
