--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-q",
-	"version": "0.9.0",
+	"version": "0.10.0",
 	"description": "Q interfacing with Node.js",
 	"keywords": ["q", "kx", "kdb+", "kdb+tick", "interfacing"],
 	"main": "index.js",
@@ -19,7 +19,7 @@
 	"devDependencies": {
 		"async": "0.9.0",
 		"mocha": "2.0.1",
-		"jslint": "0.6.5",
+		"jshint": "2.5.6",
 		"madge": "0.3.5",
 		"npmedge": "0.2.1"
 	},
