--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"test": "make test",
 		"itest": "make itest"
 	},
-	"author": "Michael Wittig <michael.wittig@cinovo.de>",
+	"author": "Michael Wittig <post@michaelwittig.info>",
 	"license": "Apache-2.0",
 	"dependencies": {
 		"assert-plus": "0.1.5"
