--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"jshint": "2.8.0",
 		"madge": "0.5.0",
 		"npmedge": "0.2.2",
-		"moment": "2.10.6"
+		"moment": "2.10.6",
+		"istanbul": "0.4.1"
 	},
 	"repository": {
 		"type": "git",
