--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-q",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"description": "Q interfacing with Node.js",
 	"keywords": ["q", "kx", "kdb+", "kdb+tick", "interfacing"],
 	"main": "index.js",
@@ -11,6 +11,8 @@
 	"author": "Michael Wittig <post@michaelwittig.info>",
 	"license": "MIT",
 	"dependencies": {
+		"bignum": "0.11.0",
+		"node-uuid": "1.4.7"
 	},
 	"devDependencies": {
 		"async": "1.5.0",
