--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,11 @@ node_js:
   - "4"
   - "4.2"
   - "5"
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
