--- a/package.json
+++ b/package.json
@@ -1,33 +1,40 @@
 {
-	"name": "node-q",
-	"version": "2.1.0",
-	"description": "Q interfacing with Node.js",
-	"keywords": ["q", "kx", "kdb+", "kdb+tick", "interfacing"],
-	"main": "index.js",
-	"scripts": {
-		"test": "make test",
-		"itest": "make itest"
-	},
-	"author": "Michael Wittig <post@michaelwittig.info>",
-	"license": "MIT",
-	"dependencies": {
-		"long": "3.0.3",
-		"node-uuid": "1.4.7"
-	},
-	"devDependencies": {
-		"async": "1.5.2",
-		"mocha": "2.4.5",
-		"jshint": "2.9.1",
-		"madge": "0.5.3",
-		"npmedge": "0.2.2",
-		"moment": "2.11.2",
-		"istanbul": "0.4.2"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/michaelwittig/node-q.git"
-	},
-	"engines": {
-		"node": ">=0.10"
-	}
+  "name": "node-q",
+  "version": "2.1.1",
+  "description": "Q interfacing with Node.js",
+  "keywords": [
+    "q",
+    "kx",
+    "kdb+",
+    "kdb+tick",
+    "interfacing"
+  ],
+  "main": "index.js",
+  "scripts": {
+    "test": "make test",
+    "itest": "make itest"
+  },
+  "author": "Michael Wittig <post@michaelwittig.info>",
+  "license": "MIT",
+  "dependencies": {
+    "buffer-indexof-polyfill": "1.0.1",
+    "long": "3.0.3",
+    "node-uuid": "1.4.7"
+  },
+  "devDependencies": {
+    "async": "1.5.2",
+    "mocha": "2.4.5",
+    "jshint": "2.9.1",
+    "madge": "0.5.3",
+    "npmedge": "0.2.2",
+    "moment": "2.11.2",
+    "istanbul": "0.4.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/michaelwittig/node-q.git"
+  },
+  "engines": {
+    "node": ">=0.10"
+  }
 }
