--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "types": "index.d.ts",
   "scripts": {
     "test": "make test",
-    "itest": "make itest"
+    "itest": "make itest",
+    "prepublish": "tsc"
   },
   "author": "Michael Wittig <post@michaelwittig.info>",
   "license": "MIT",
