--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
   "license": "MIT",
   "dependencies": {
     "buffer-indexof-polyfill": "1.0.1",
-    "long": "3.0.3",
-    "node-uuid": "1.4.7"
+    "long": "4.0.0",
+    "node-uuid": "1.4.8"
   },
   "devDependencies": {
-    "@types/long": "^3.0.31",
-    "@types/node": "^8.0.8",
-    "async": "1.5.2",
-    "istanbul": "0.4.2",
-    "jshint": "2.9.1",
-    "madge": "0.5.3",
-    "mocha": "2.4.5",
-    "moment": "2.22.2",
+    "@types/long": "4.0.0",
+    "@types/node": "12.0.2",
+    "async": "3.0.0",
+    "istanbul": "0.4.5",
+    "jshint": "2.10.2",
+    "madge": "3.4.4",
+    "mocha": "6.1.4",
+    "moment": "2.24.0",
     "npmedge": "0.2.2",
-    "typescript": "^2.4.1"
+    "typescript": "3.4.5"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/michaelwittig/node-q.git"
   },
   "engines": {
-    "node": ">=0.10"
+    "node": ">=8"
   }
 }
